// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsGroupPanels > renders correctly 1`] = `
<div
  data-v-5ee247fe=""
>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-1"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-0"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-green mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group1 
        <span
          data-v-5ee247fe=""
        >
           (2) 
        </span>
      </span>
      <!--v-if-->
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    <!--v-if-->
  </div>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-2"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-2"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-blue mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group2 
        <span
          data-v-5ee247fe=""
        >
           (12) 
        </span>
      </span>
      <!--v-if-->
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    <!--v-if-->
  </div>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-3"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-4"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-red mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group3 
        <span
          data-v-5ee247fe=""
        >
           (123) 
        </span>
      </span>
      
      
      <!-- Clickable icon (MDI or image) -->
      
      <!-- Static MDI icon (existing) -->
      <i
        aria-describedby="v-tooltip-v-6"
        aria-hidden="false"
        class="v-icon notranslate v-theme--light text-icon-default v-icon--clickable cursor-default ml-2"
        data-v-c9a9e819=""
        id="icon"
        role="button"
        style="font-size: 16px; height: 16px; width: 16px;"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.36,14C16.44,13.34 16.5,12.68 16.5,12C16.5,11.32 16.44,10.66 16.36,10H19.74C19.9,10.64 20,11.31 20,12C20,12.69 19.9,13.36 19.74,14M14.59,19.56C15.19,18.45 15.65,17.25 15.97,16H18.92C17.96,17.65 16.43,18.93 14.59,19.56M14.34,14H9.66C9.56,13.34 9.5,12.68 9.5,12C9.5,11.32 9.56,10.65 9.66,10H14.34C14.43,10.65 14.5,11.32 14.5,12C14.5,12.68 14.43,13.34 14.34,14M12,19.96C11.17,18.76 10.5,17.43 10.09,16H13.91C13.5,17.43 12.83,18.76 12,19.96M8,8H5.08C6.03,6.34 7.57,5.06 9.4,4.44C8.8,5.55 8.35,6.75 8,8M5.08,16H8C8.35,17.25 8.8,18.45 9.4,19.56C7.57,18.93 6.03,17.65 5.08,16M4.26,14C4.1,13.36 4,12.69 4,12C4,11.31 4.1,10.64 4.26,10H7.64C7.56,10.66 7.5,11.32 7.5,12C7.5,12.68 7.56,13.34 7.64,14M12,4.03C12.83,5.23 13.5,6.57 13.91,8H10.09C10.5,6.57 11.17,5.23 12,4.03M18.92,8H15.97C15.65,6.75 15.19,5.55 14.59,4.44C16.43,5.07 17.96,6.34 18.92,8M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </i>
      
      
      <!--teleport start-->
      <!--teleport end-->
      
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`SettingsGroupPanels > renders correctly when showGlobalGroupsIcon is false 1`] = `
<div
  data-v-5ee247fe=""
>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-1"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-0"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-green mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group1 
        <span
          data-v-5ee247fe=""
        >
           (2) 
        </span>
      </span>
      <!--v-if-->
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    <!--v-if-->
  </div>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-2"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-2"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-blue mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group2 
        <span
          data-v-5ee247fe=""
        >
           (12) 
        </span>
      </span>
      <!--v-if-->
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    <!--v-if-->
  </div>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-3"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-4"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-red mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group3 
        <span
          data-v-5ee247fe=""
        >
           (123) 
        </span>
      </span>
      <!--v-if-->
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`SettingsGroupPanels > renders correctly when showGroupItemsCount is false 1`] = `
<div
  data-v-5ee247fe=""
>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-1"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-0"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-green mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group1 
        <!--v-if-->
      </span>
      <!--v-if-->
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    <!--v-if-->
  </div>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-2"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-2"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-blue mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group2 
        <!--v-if-->
      </span>
      <!--v-if-->
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    <!--v-if-->
  </div>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-3"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-4"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-red mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group3 
        <!--v-if-->
      </span>
      
      
      <!-- Clickable icon (MDI or image) -->
      
      <!-- Static MDI icon (existing) -->
      <i
        aria-describedby="v-tooltip-v-6"
        aria-hidden="false"
        class="v-icon notranslate v-theme--light text-icon-default v-icon--clickable cursor-default ml-2"
        data-v-c9a9e819=""
        id="icon"
        role="button"
        style="font-size: 16px; height: 16px; width: 16px;"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.36,14C16.44,13.34 16.5,12.68 16.5,12C16.5,11.32 16.44,10.66 16.36,10H19.74C19.9,10.64 20,11.31 20,12C20,12.69 19.9,13.36 19.74,14M14.59,19.56C15.19,18.45 15.65,17.25 15.97,16H18.92C17.96,17.65 16.43,18.93 14.59,19.56M14.34,14H9.66C9.56,13.34 9.5,12.68 9.5,12C9.5,11.32 9.56,10.65 9.66,10H14.34C14.43,10.65 14.5,11.32 14.5,12C14.5,12.68 14.43,13.34 14.34,14M12,19.96C11.17,18.76 10.5,17.43 10.09,16H13.91C13.5,17.43 12.83,18.76 12,19.96M8,8H5.08C6.03,6.34 7.57,5.06 9.4,4.44C8.8,5.55 8.35,6.75 8,8M5.08,16H8C8.35,17.25 8.8,18.45 9.4,19.56C7.57,18.93 6.03,17.65 5.08,16M4.26,14C4.1,13.36 4,12.69 4,12C4,11.31 4.1,10.64 4.26,10H7.64C7.56,10.66 7.5,11.32 7.5,12C7.5,12.68 7.56,13.34 7.64,14M12,4.03C12.83,5.23 13.5,6.57 13.91,8H10.09C10.5,6.57 11.17,5.23 12,4.03M18.92,8H15.97C15.65,6.75 15.19,5.55 14.59,4.44C16.43,5.07 17.96,6.34 18.92,8M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </i>
      
      
      <!--teleport start-->
      <!--teleport end-->
      
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`SettingsGroupPanels > renders correctly when showGroupItemsCount is false, but group is open 1`] = `
<div
  data-v-5ee247fe=""
>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2 expansion-panel--opened"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-1"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-0"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-green mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group1 
        <span
          data-v-5ee247fe=""
        >
           (2) 
        </span>
      </span>
      <!--v-if-->
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    
    
  </div>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-2"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-2"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-blue mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group2 
        <!--v-if-->
      </span>
      <!--v-if-->
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    <!--v-if-->
  </div>
  <div
    class="expansion-panel drag-item bg-white rounded elevation-2 mb-4 pa-2"
    data-draggable="true"
    data-v-5ee247fe=""
    id="group-panel-3"
  >
    <div
      class="d-flex align-center panel-content"
      data-v-5ee247fe=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-secondary-dark handle grabbable"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      
      
      <button
        aria-describedby="v-tooltip-v-4"
        class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text mx-2"
        data-v-5ee247fe=""
        id="evocon-button"
        style="height: 40px; max-height: 40px; max-width: 40px; min-height: 40px; min-width: 40px; width: 40px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-icon-default evocon-button-icon"
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
              />
            </svg>
          </i>
          <!--v-if-->
          
          
        </span>
        <!---->
        <!---->
      </button>
      
      <!--teleport start-->
      <!--teleport end-->
      
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-red mr-1"
        data-v-5ee247fe=""
        style="font-size: 18px; height: 18px; width: 18px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3H16C18.76 3 21 5.24 21 8V16C21 18.76 18.76 21 16 21H8C5.24 21 3 18.76 3 16V8C3 5.24 5.24 3 8 3Z"
          />
        </svg>
      </i>
      <span
        class="text-body-large font-weight-medium text-truncate"
        data-v-5ee247fe=""
      >
        Group3 
        <!--v-if-->
      </span>
      
      
      <!-- Clickable icon (MDI or image) -->
      
      <!-- Static MDI icon (existing) -->
      <i
        aria-describedby="v-tooltip-v-6"
        aria-hidden="false"
        class="v-icon notranslate v-theme--light text-icon-default v-icon--clickable cursor-default ml-2"
        data-v-c9a9e819=""
        id="icon"
        role="button"
        style="font-size: 16px; height: 16px; width: 16px;"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.36,14C16.44,13.34 16.5,12.68 16.5,12C16.5,11.32 16.44,10.66 16.36,10H19.74C19.9,10.64 20,11.31 20,12C20,12.69 19.9,13.36 19.74,14M14.59,19.56C15.19,18.45 15.65,17.25 15.97,16H18.92C17.96,17.65 16.43,18.93 14.59,19.56M14.34,14H9.66C9.56,13.34 9.5,12.68 9.5,12C9.5,11.32 9.56,10.65 9.66,10H14.34C14.43,10.65 14.5,11.32 14.5,12C14.5,12.68 14.43,13.34 14.34,14M12,19.96C11.17,18.76 10.5,17.43 10.09,16H13.91C13.5,17.43 12.83,18.76 12,19.96M8,8H5.08C6.03,6.34 7.57,5.06 9.4,4.44C8.8,5.55 8.35,6.75 8,8M5.08,16H8C8.35,17.25 8.8,18.45 9.4,19.56C7.57,18.93 6.03,17.65 5.08,16M4.26,14C4.1,13.36 4,12.69 4,12C4,11.31 4.1,10.64 4.26,10H7.64C7.56,10.66 7.5,11.32 7.5,12C7.5,12.68 7.56,13.34 7.64,14M12,4.03C12.83,5.23 13.5,6.57 13.91,8H10.09C10.5,6.57 11.17,5.23 12,4.03M18.92,8H15.97C15.65,6.75 15.19,5.55 14.59,4.44C16.43,5.07 17.96,6.34 18.92,8M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </i>
      
      
      <!--teleport start-->
      <!--teleport end-->
      
      <div
        class="v-spacer"
        data-v-5ee247fe=""
      />
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light v-icon--size-default text-icon-default collapse-icon"
        data-v-5ee247fe=""
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </i>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`SettingsGroupPanels > renders correctly with empty groups 1`] = `
<div
  data-v-5ee247fe=""
/>
`;
